--- a/views/home.jade
+++ b/views/home.jade
@@ -1,6 +1,6 @@
 html
   head
-    title='Nodejs app app'
+    title='Nodejs js app app'
     link(rel='stylesheet', href='http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css')
   body
     div.container
